# stripje

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: README.md  dependabot.yml
.github/workflows/: category-encoders.yml  code-quality.yml  coverage.yml  performance.yml  release.yml  test.yml  update-deps.yml
examples/: profiling_example.ipynb
src/stripje/: __init__.py  __version__.py  fast_pipeline.py  profiling.py  profiling_style.css  registry.py
src/stripje/estimators/: __init__.py  ensemble.py  linear.py  naive_bayes.py  tree.py
src/stripje/transformers/: __init__.py  decomposition.py  feature_selection.py  preprocessing.py
src/stripje/transformers/contrib/: __init__.py  category_encoders_transformers.py
tests/: test_all_transformers.py  test_dynamic_discovery.py  test_fallback_mechanism.py  test_fast_pipeline.py  test_fast_pipeline_coverage.py  test_integration.py  test_nested_performance.py  test_nested_pipeline.py  test_performance_benchmarks.py  test_pipeline_compiler.py  test_profiling.py  test_regression_cases.py  test_specific_estimators.py
tests/integration/: test_basic_functionality.py
tests/test_estimators/: test_ensemble.py  test_linear.py  test_naive_bayes.py  test_tree.py
tests/test_integration/: test_basic_functionality.py  test_category_encoders_integration.py
tests/test_transformers/: test_decomposition.py  test_feature_selection.py  test_preprocessing.py
tests/test_transformers/test_contrib/: test_category_encoders_enhanced.py  test_category_encoders_preserve_columns.py  test_category_encoders_transformers.py
